--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de incio</title>
+    <title>Acerca de</title>
 </head>
 <body>
-    <h>Mi página</h>
+    <h1>Acerca de</h1>
 </body>
 </html>
